--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
 <!-- hello git , love git  -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>hello git</title>
+</head>
+<body>
+    <h1>learning git</h1>
+    <div>
+        
+    </div>
+</body>
+</html>
